# embeddedml

./: .gitignore  NaiveBayes.ipynb  Power consumption.ipynb  README.md  audio.md  braindump.md  cancer.py  digits.py  embayes.h  embeddedml.ino  emlinear.h  framework-spectrum.csv  hardware-spectrum.csv  micromlgen.md  naivebayes.c  naivebayes.py  naivebayesmodule.cpp  notes.md  pdf.c  pdf.h  probability.c  setup.py  worklog.csv  worklog.py
TinyML4D-ShowAndTell-April2025/: README.md
acm-hpc-2019/: README.md  algorand.md  analysis-challenge.md  being-human-with-algorithms.md  energy-efficient-ml.md  eu-programmes.md  introduction.md  iot-supercomputing-convergence.md  machine-learning-accelerators.md  memory-compression.md  task-based-programming.md
applications/: 3d-printer-monitoring.md  README.md  air-quality.md  animal-activity-recognition.md  battery-health.md  colors.md  computer-vision.md  electronic-nose.md  fall-detection.md  gesture-recognition.md  gunshot-detection.md  human-activity-recognition.md  regression.md  robotics.md  spectroscopy.md
convtrees/: braindump.md  convtrees.py  deeptrees.md  plot.py
emlearn/: .gitignore  activity-detection.md  anomaly-detection.md  audio.md  colordetectorled.ino  demos.md  efficient-micropython.md  feature-engineering.md  gesture-recognition.md  isolation-forest.md  market.md  marketing.md  noise-monitoring.md  on-device-learning.md  performance-tooling.md  platforms.md  roadmap.md  tinytapeouts.md  (+2 more)
handson/fpga-riscv/zfirmware/: CMakeLists.txt  prj.conf
handson/fpga-riscv/zfirmware/src/: main.c
topics/: fpga.md  (+7 more)
(+1265 files in other folders)
